--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
 			<canvas id="garden"></canvas>
 			<div id="words">
 				<div id="messages">
-					zhu ying, 我很高兴认识你
+					朱 颖, 我很高兴认识你
 					<div id="elapseClock"></div>
 				</div>
 				<div id="loveu">
 					祝你情人节快乐！<br/>
-					<div class="signature">- 朱颖 | forever</div>
+					<div class="signature">- 朱泓彬哥哥 | forever</div>
 				</div>
 			</div>
 		</div>
