--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
 			ridicule(u, i)<br/>
 			<span class="comments"># 我们都很享受彼此的幽默和打趣.</span><br/>
 			enjoy(u, i)<br/>
-			<span class="comments"># 我们每个夜晚都有说不完的话题.</span><br/>
+			<span class="comments"># 我们每天都有说不完的话题.</span><br/>
 			theme(u, i)<br/>
 			<span class="comments"># 虽然我们相隔千里.</span><br/>
 			distance(u, i, sometimes=<span class="keyword">True</span>)<br/>
-			<span class="comments"># 但我们能够感受在分享各自的生活和烦恼.</span><br/>
+			<span class="comments"># 但我们能够感受到在分享各自的生活和烦恼.</span><br/>
 			u.in_harmony_with(i) <br/>
 			i.in_harmony_with(u) <br/>
 			<span class="comments"># You are the greatest flower of my life.</span><br/>
@@ -66,8 +66,8 @@
 					<div id="elapseClock"></div>
 				</div>
 				<div id="loveu">
-					祝你情人节快乐！<br/>
-					<div class="signature">- 朱泓彬哥哥 | forever</div>
+					   情人节快乐！<br/>
+					<div class="signature">- 你的朱泓彬哥哥 | forever</div>
 				</div>
 			</div>
 		</div>
