--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
 			<canvas id="garden"></canvas>
 			<div id="words">
 				<div id="messages">
-					朱 颖, 我很高兴认识你
+					朱 颖, 我们相识距今
 					<div id="elapseClock"></div>
 				</div>
 				<div id="loveu">
-					   情人节快乐！<br/>
-					<div class="signature">- 你的朱泓彬哥哥 | forever</div>
+					情人节快乐！<br/>
+					<div class="signature">- Your 朱泓彬哥哥 | forever</div>
 				</div>
 			</div>
 		</div>
