--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
 
 <body>
 <div id="mainDiv">
+	<audio autoplay="autoplay" loop="loop" preload="auto" controls="controls"
+            src="./柏松 - 世间美好与你环环相扣.mp3">       
+	</audio>
 	<div id="content">
 		<div id="code">
 			<span class="comments">##</span><br/>
